--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,7 @@ numpy
 scipy
 spacy
 python-lzo
+fuzzywuzzy[speedup]
 git+git@github.com:zhupengjia/KnowledgeGraphEmbedding.git
 git+git@github.com:zhupengjia/nlptools.git
+
